# makethemsuffer

./: .gitignore  @echo  Makefile  git  octave-workspace  tests.mk  variables.mk
CHStone/: Makefile  config_ga.tcl  config_ilp.tcl  config_ni.tcl  config_sdc.tcl  config_sms.tcl
CHStone/adpcm_ga/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/adpcm_ilp/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/adpcm_ni/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/adpcm_sdc/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  Makefile  config.tcl
CHStone/adpcm_sms/: DetailedModuleSDCSchedulingTime  config.tcl
CHStone/aes_ga/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/aes_ilp/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/aes_ni/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/aes_sdc/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  Makefile
CHStone/aes_sms/: DetailedModuleSDCSchedulingTime
CHStone/blowfish_ga/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/blowfish_ilp/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/blowfish_ni/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  config.tcl
CHStone/blowfish_sdc/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/blowfish_sms/: DetailedModuleSDCSchedulingTime
CHStone/gsm_ga/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/gsm_ilp/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  config.tcl
CHStone/gsm_ni/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/gsm_sdc/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/gsm_sms/: gsm.c
CHStone/jpeg_ga/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  Makefile  config.tcl
CHStone/jpeg_ilp/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/jpeg_ni/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/jpeg_sdc/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  config.tcl  main.c
CHStone/jpeg_sms/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/mips_ga/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/mips_ilp/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/mips_ni/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  Makefile
CHStone/mips_sdc/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/mips_sms/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/sha_ga/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  Makefile
CHStone/sha_ilp/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/sha_ni/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
CHStone/sha_sdc/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  config.tcl  sha_driver.c
CHStone/sha_sms/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime
DSE/: Makefile  comples-gas-results_full.m
DSE/adderchain/: results_full.m
DSE/adderchain-gas/: adderchain.c  lup.make  results_full.m
DSE/adderchain-ilp/: results_full.m
DSE/adderchain-nis/: results_full.m
DSE/adderchain-nis-unroll/: adderchain.c  results_full.m
DSE/adderchain-no-pipe/: config.tcl  results_full.m
DSE/adderchain-sdc/: config.tcl  results_full.m
DSE/bak/: cpnopipe-results_full.m  results_full.m
DSE/complex/: results_full.m
DSE/complex-gas/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  lup.make
DSE/complex-ilp/: config.tcl  results_full.m
DSE/complex-nis/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  results_full.m
DSE/complex-no-pipe/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  config.tcl  results_full.m
DSE/complex-sdc/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  complex.c  results_full.m
DSE/dividers-gas/: config.tcl  dividers.c  results_full.m
DSE/dividers-ilp/: results_full.m
DSE/dividers-nis/: results_full.m
DSE/dividers-no-pipe/: results_full.m
DSE/dividers-sdc/: lup.make  results_full.m
IOCcommon/: aoc_helper.cpp  aoc_helper.h
LatencyPressure/: graph.m
adder_chainscaling/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  adderchain.1.bc  adderchain.1.ll  adderchain.bc  adderchain.c  adderchain.ll  adderchain.postlto.6.bc  adderchain.postlto.6.ll  adderchain.postlto.8.bc  adderchain.postlto.8.ll  adderchain.postlto.bc  adderchain.postlto.ll  adderchain.prelto.1.bc  adderchain.prelto.1.ll  adderchain.prelto.6.ll  adderchain.prelto.bc  adderchain.prelto.linked.1.bc  adderchain.prelto.linked.bc  adderchain.prelto.linked.ll  adderchain.prelto.ll  adderchain.v  adderchain_labeled.c  binding.legup.rpt  combine_profile.rpt  config.tcl  dfg.@main_%1.dot  dfg.@main_%129.dot  dfg.@main_%187.dot  dfg.@main_%251.dot  dfg.@main_%311.dot  dfg.@main_%371.dot  fsm.main.dot  fsm.pipeline.@main.dot  gantt.main.tex  lp.mps  memory.legup.rpt  multipumping.legup.rpt  pipeline.dot  pipelineDFG.dot  (+7 more)
myDocMyHell/: CMakeLists.txt
myDocMyHell/analysis/: CMakeLists.txt
myDocMyHell/analysis/accelerator-analysis/: CMakeLists.txt  accelerator-analysis.cpp.in  accelerator-analysis.h.in
myDocMyHell/codeTemplates/: CodeTemplate.h.in  Loop1.code  Loop1.h
myDocMyHell/passes/code-manipulator/: code-manipulator.cpp.in
myDocMyHell/programs/Test/: Test.cpp
myDocMyHell/tests/Test/: CMakeLists.txt  Test.c
plots/: DetailedLegUPTiming  DetailedModuleSDCSchedulingTime  banana.mat  compareGA.m  degrade.m  lupplot.m  sdcmodsched.m
scaling/: Makefile
scaling.bak/: Makefile
synthetic/: CodeManipulator.cpp  CodeManipulator.h  CodeTemplate.cpp  CodeTemplate.h  Loop1.cpp  Loop2.cpp  Test.cpp  a.out  output.c
synthetic/codeTemplates/: Array.code  Array.cpp  Array.h  CMakeLists.txt  CodeTemplate.cpp.in  CodeTemplate.h.in  Loop1.code  Loop1.cpp  Loop2.code  Loop2.cpp  Loop2.h  Loop3.code  Loop3.cpp  Loop3.h  compileIRs.make
synthetic/passes/code-manipulator/: CMakeLists.txt  code-manipulator.cpp.in  code-manipulator.h.in
synthetic/programs/Test/: CMakeLists.txt  Test.cpp  insertOnTestBenches.make
userInfo/: README.md  benchmark.list
(+15355 files in other folders)
